--- a/CSS.html
+++ b/CSS.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC>
+<!DOCTYPE html>
 <html>
 <head>
   <title>Pagina recopilatoria comandos HTML</title>
@@ -8,123 +8,133 @@
 	background: silver;
 	color: red;
 	font-size: medium;
-	margin: 25
-">
+	margin: 2em;
+	margin-left: 2em;
+	">
 
-<h1>Pagina recopilatoria con las distintas etiquetas HTML usadas en las practicas</h1>
+	<h1>Pagina recopilatoria con las distintas etiquetas HTML usadas en las practicas</h1>
 
-Bienvenido a mi primera pagina recopilatoria con distintas ejemplos practicos de como utilizar los comandos HTML
-<br>
-<br>
-Si pinchas en cada uno de los enlaces te llevara a cada una de las practicas realizadas durante el 
-curso monstrando un pequeño ejemplo de como usar cada comando.
+	Bienvenido a mi primera pagina recopilatoria con distintas ejemplos practicos de como utilizar los comandos HTML
+	<br>
+	</br>
+	Si pinchas en cada uno de los enlaces te llevara a cada una de las practicas realizadas durante el 
+	curso monstrando un pequeño ejemplo de como usar cada comando.
 
-<p style="
-	font-weight: bold;
-">
-A continuación se explicara brevemente la estructura básica de una página HTML y en la posterior tabla,se recogen los distintos enlaces a las prácticas realizadas. 
-Espero, vayan ampliándose y mejorando el contenido de cada una.
+	<p style="
+		font-weight: bold;
+		">
+		A continuación se explicara brevemente la estructura básica de una página HTML y en la posterior tabla,se recogen los distintos enlaces a las prácticas realizadas. 
+		Espero, vayan ampliándose y mejorando el contenido de cada una.
 
-<h1>Estructura básica página HTML (En tu código fuente, en lugar de las comillas "", deberas usar <> al abrir usar etiqueta-comando) </h1>
-	<ul>
-		<li>Cada página comienza con "HTML"</li>
-		<li>A continuación viene la cabecera, delimitada por "HEAD" y "/HEAD".</li>
-		<li>Despues el comando "BODY", que indica el comienzo y el cuerpo de la página.
-		Las instrucciones HTML se escribiran a continuación, y finalizarán con "/BODY"</li>
-		<li>La página acabara con "/HTML".</li>
-	</ul>  
+	<h1>Estructura básica página HTML (En tu código fuente, en lugar de las comillas "", deberas usar <> al abrir usar etiqueta-comando) </h1>
+		<ul>
+			<li>Cada página comienza con "HTML"</li>
+			<li>A continuación viene la cabecera, delimitada por "HEAD" y "/HEAD".</li>
+			<li>Despues el comando "BODY", que indica el comienzo y el cuerpo de la página.
+			Las instrucciones HTML se escribiran a continuación, y finalizarán con "/BODY"</li>
+			<li>La página acabara con "/HTML".</li>
+		</ul>  
 	
-<img src="codigoejemplo.PNG" style="
-	display:block;
-	margin:auto;
-">
+	<img src="codigoejemplo.PNG" style="
+		display:block;
+		margin:auto;
+		">
 
-<table border="5" width="900" height="500" style="
-	display:table;
-	margin:auto;
-	text-align: center;
-">
+	<table style="
+		background: orange;
+		height: 500px;
+		width: 900px;
+		display:table;
+		border-width: 5px;
+		border-style: groove;
+		margin:auto;
+		text-align: center;
+		">
 
-  <caption style="
-  font-size: xx-large;
-  ">
-  Enlaces HTML
-  </caption>
+		<caption style="
+			font-size: xx-large;
+			">
+			Enlaces HTML</caption>
 
-  <tr style="
-  font-size: xx-large;
-  ">
-    <td>Enlace HTML</td>
-    <td>Descripción</td>
-  </tr>
+		<tr style="
+			font-size: xx-large;
+			">
+			<td>Enlace HTML</td>
+			<td>Descripción</td>
+		</tr>
   
-  <tr style="
-	font-weight: bold;
-">
-    <td><a href="LISTA_FJRR.html" style="
-	color: red;
-	">
-	Ejemplo de una lista </a></td>
-    <td width="300" height="250" style="
-	background: url(lista.PNG);
-	">
-	Como realizar una lista</td>
-  </tr>
+		<tr style="
+			font-weight: bold;
+			">
+			<td><a style="
+				color: red;"  
+				href="LISTA_FJRR.html">
+				Ejemplo de una lista <br></a></td>
+			<td style="
+				height: 250px;
+				width: 300px;
+				background: url(lista.PNG);
+				">
+				Como realizar una lista</td>
+		</tr>
 
-  <tr>
-    <td><a href="EstructJerar2_FJRR.html" style="
-	color: red;
-	">
-	Ejemplo de una estructura jerarquica <img src="estructura.PNG"></a></td>
-    <td>Como realizar una estructura jeraquica</td>
-  </tr>
+		<tr>
+			<td><a style="
+				color: red;" 
+				href="EstructJerar2_FJRR.html">
+				Ejemplo de una estructura jerarquica </br>
+				<img src="estructura.PNG"></a></td>
+			<td>Como realizar una estructura jeraquica</td>
+		</tr>
   
-    <tr style="
-	font-style: oblique;
-	">
-    <td><a href="Formulario_FJRR.html" style="
-	color: red;
-	">
-	Ejemplo de un formulario <img src="formulario.PNG"></a></td>
-    <td>Como realizar un formulario</td>
-	</tr>
+		<tr style="
+			font-style: oblique;
+			">
+			<td><a style="
+				color: red;" 
+				href="Formulario_FJRR.html">
+				Ejemplo de un formulario </br>
+				<img src="formulario.PNG"></a></td>
+			<td>Como realizar un formulario</td>
+		</tr>
   
-	<tr style="
-	text-decoration: underline;
-	">
-    <td><a href="Tabla_FJRR.html" style="
-	color: red;
-	">
-	Ejemplo de una tabla<img src="tabla.PNG"></a></td>
-    <td>Como realizar una tabla</td>
-	</tr>
+		<tr style="
+			text-decoration: underline;
+			">
+			<td><a style="
+				color: red;" 
+				href="Tabla_FJRR.html">
+				Ejemplo de una tabla</br>
+				<img src="tabla.PNG"></a></td>
+			<td>Como realizar una tabla</td>
+		</tr>
 
-</table>
-<br></br>
+	</table>
+	<br>
 
-<p style="
-	font-style: oblique;
-">
-	Para concluir y a modo recopilatorio, os agradecería rellenar el breve cuestionario que aparece a continuación:
-<br></br>
+	<p style="
+		font-style: oblique;
+		">
+		Para concluir y a modo recopilatorio, os agradecería rellenar el breve cuestionario que aparece a continuación:
+	</br>
 	<h2 style="
-	text-decoration: underline;
-	">
-	Dentro del mundo del diseño web, ¿Que concepto o apartado es tu favorito?</h2>
+		text-decoration: underline;
+		">
+		Dentro del mundo del diseño web, ¿Que concepto o apartado es tu favorito?</h2>
 		<input type="radio" name="tipo" value="html"> HTML: Concerniente a la a estructura de la página web. Se usan "etiquetas"
-		<br></br>
+		<br>
 		<input type="radio" name="tipo" value="css"> CSS: Concerniente al estilo que le aplicamos a cada uno de los elementos previos creados en HTML. Se usan "selectores"
-		<br></br>
+		<br>
 		<input type="radio" name="tipo" value="java"> JAVA: de forma muy básica, sería aquello concerniente a la animación que aparece en una web.
-		<br></br>
+		<br>
 		<input type="radio" name="tipo" value="pagina"> Todo en su conjunto.
-<br></br>
+	<br><br>
 <input type="submit" value="Enviar">
 <br></br>
-<p> <a href="https://smart-congress.000webhostapp.com/PaginaHTML.html" style="
-	color: red;
-	"> 
-	Enlace URL página web </a>
+<p> <a style="
+		color: red;" 
+		href="https://smart-congress.000webhostapp.com/PaginaHTML.html"> 
+		Enlace URL página web </a>
 
 <address>Creada el 08 de noviembre de 2020<br>
   por Fco. Javier Ruiz.</address>
