--- a/CSS.html
+++ b/CSS.html
@@ -8,23 +8,26 @@
 	background: silver;
 	color: red;
 	font-size: medium;
-	margin: 2em;
-	margin-left: 2em;
+	margin-top: 1.55em;
+	margin-left: 1.6em;
+	margin-right: 1.5em;
 	">
 
 	<h1>Pagina recopilatoria con las distintas etiquetas HTML usadas en las practicas</h1>
 
-	Bienvenido a mi primera pagina recopilatoria con distintas ejemplos practicos de como utilizar los comandos HTML
-	<br>
-	</br>
-	Si pinchas en cada uno de los enlaces te llevara a cada una de las practicas realizadas durante el 
-	curso monstrando un pequeño ejemplo de como usar cada comando.
+	<div>Bienvenido a mi primera pagina recopilatoria con distintas ejemplos practicos de como utilizar los comandos HTML </div>
+	
+	<div style="
+		padding-top: 17.5px;
+		padding-bottom: 16px;
+		">Si pinchas en cada uno de los enlaces te llevara a cada una de las practicas realizadas durante el 
+	curso monstrando un pequeño ejemplo de como usar cada comando.</div>
 
-	<p style="
+	<div style="
 		font-weight: bold;
 		">
 		A continuación se explicara brevemente la estructura básica de una página HTML y en la posterior tabla,se recogen los distintos enlaces a las prácticas realizadas. 
-		Espero, vayan ampliándose y mejorando el contenido de cada una.
+		Espero, vayan ampliándose y mejorando el contenido de cada una.</div>
 
 	<h1>Estructura básica página HTML (En tu código fuente, en lugar de las comillas "", deberas usar <> al abrir usar etiqueta-comando) </h1>
 		<ul>
@@ -110,34 +113,46 @@
 		</tr>
 
 	</table>
-	<br>
 
-	<p style="
+	<div style="
 		font-style: oblique;
+		padding-top: 50px;
+		padding-bottom: 20px;
 		">
-		Para concluir y a modo recopilatorio, os agradecería rellenar el breve cuestionario que aparece a continuación:
-	</br>
+		Para concluir y a modo recopilatorio, os agradecería rellenar el breve cuestionario que aparece a continuación:</div>
+
 	<h2 style="
 		text-decoration: underline;
 		">
 		Dentro del mundo del diseño web, ¿Que concepto o apartado es tu favorito?</h2>
-		<input type="radio" name="tipo" value="html"> HTML: Concerniente a la a estructura de la página web. Se usan "etiquetas"
-		<br>
-		<input type="radio" name="tipo" value="css"> CSS: Concerniente al estilo que le aplicamos a cada uno de los elementos previos creados en HTML. Se usan "selectores"
-		<br>
-		<input type="radio" name="tipo" value="java"> JAVA: de forma muy básica, sería aquello concerniente a la animación que aparece en una web.
-		<br>
-		<input type="radio" name="tipo" value="pagina"> Todo en su conjunto.
-	<br><br>
+		<div><input type="radio" name="tipo" value="html"> HTML: Concerniente a la a estructura de la página web. Se usan "etiquetas"</div>
+		<div style="
+		padding-top: 18px;
+		"><input type="radio" name="tipo" value="css"> CSS: Concerniente al estilo que le aplicamos a cada uno de los elementos previos creados en HTML. Se usan "selectores"</div>
+		<div style="
+		padding-top: 18px;
+		"><input type="radio" name="tipo" value="java"> JAVA: de forma muy básica, sería aquello concerniente a la animación que aparece en una web.</div>
+		<div style="
+		padding-top: 18px;
+		padding-bottom: 18px;
+		"><input type="radio" name="tipo" value="pagina"> Todo en su conjunto.</div>
 <input type="submit" value="Enviar">
-<br></br>
-<p> <a style="
+
+<div style="
+		padding-top: 35px;
+		"> <a style="
 		color: red;" 
 		href="https://smart-congress.000webhostapp.com/PaginaHTML.html"> 
-		Enlace URL página web </a>
+		Enlace URL página web </a> </div>
 
-<address>Creada el 08 de noviembre de 2020<br>
-  por Fco. Javier Ruiz.</address>
+<div style="
+		font-style: oblique;
+		padding-top: 16px;
+		">Creada el 08 de noviembre de 2020</div>
+<div style="
+		font-style: oblique;
+		padding-bottom: 17px;
+		">por Fco. Javier Ruiz.</div>
 
 </body>
 </html>
