--- a/CSS.html
+++ b/CSS.html
@@ -5,8 +5,8 @@
 </head>
 
 <body style="
-	background: silver;
-	color: red;
+	background: LIGHTSALMON;
+	color: black;
 	font-size: medium;
 	margin-top: 1.55em;
 	margin-left: 1.6em;
@@ -70,7 +70,7 @@
 			font-weight: bold;
 			">
 			<td><a style="
-				color: red;"  
+				color: black;"  
 				href="LISTA_FJRR.html">
 				Ejemplo de una lista <br></a></td>
 			<td style="
@@ -83,7 +83,7 @@
 
 		<tr>
 			<td><a style="
-				color: red;" 
+				color: black;" 
 				href="EstructJerar2_FJRR.html">
 				Ejemplo de una estructura jerarquica </br>
 				<img src="estructura.PNG"></a></td>
@@ -94,7 +94,7 @@
 			font-style: oblique;
 			">
 			<td><a style="
-				color: red;" 
+				color: black;" 
 				href="Formulario_FJRR.html">
 				Ejemplo de un formulario </br>
 				<img src="formulario.PNG"></a></td>
@@ -105,7 +105,7 @@
 			text-decoration: underline;
 			">
 			<td><a style="
-				color: red;" 
+				color: black;" 
 				href="Tabla_FJRR.html">
 				Ejemplo de una tabla</br>
 				<img src="tabla.PNG"></a></td>
@@ -141,7 +141,7 @@
 <div style="
 		padding-top: 35px;
 		"> <a style="
-		color: red;" 
+		color: black;" 
 		href="https://smart-congress.000webhostapp.com/PaginaHTML.html"> 
 		Enlace URL página web </a> </div>
 
